k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-service
  template:
    metadata:
      labels:
        app: server-service
    spec:
      imagePullSecrets:
        - name: githubtoken
      containers:
      - name: server-service
        image: ghcr.io/panda-chess/pdc-server:main
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
