k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: server-service
  ports:
    - protocol: TCP
      port: 3000
  type: LoadBalancer
